Ajout des classe Elements, Carte, remplisage des deux activity et des fichier xml activity_menu et string

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,12 @@
 <resources>
 
     <string name="app_name">SpeedReflex</string>
-    <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+
+    <string name="boutonJeuStart">JOUER</string>
+    <string name="bouttonQuitter">QUITTER</string>
+    <string name="bouttonSonOn">Son : ON</string>
+    <string name="bouttonScores">Scores</string>
+    <string name="bouttonSonOff">Son : OFF</string>
 
 </resources>
