--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,6 @@
 <resources>
 
     <string name="app_name">SpeedReflex</string>
-    <string name="action_settings">Settings</string>
 
     <string name="boutonJeuStart">JOUER</string>
     <string name="bouttonQuitter">QUITTER</string>
@@ -12,6 +11,15 @@
     <string name="bouttonDificulteF">Dificulter : FACILE</string>
     <string name="bouttonDificulteN">Dificulter : NORMAL</string>
     <string name="bouttonDificulteD">Dificulter : DIFFICILE</string>
+    <string name="btnMenuHelp">HELP</string>
+    <string name="btnMenuAPropos">A propos</string>
+    <string name="TitreBtnAPropos">A propos :</string>
+    <string name="TitreBtnHelps">Help</string>
+    <string name="txtViewPseudo">Pseudo</string>
+    <string name="txtViewTime">Erreur Temps</string>
+    <string name="txtButtonValider">Valider</string>
+    <string name="txtButtonAnnuler">Annuler</string>
+
 
 
 </resources>
